--- a/client/src/views/Landing/landing.module.css
+++ b/client/src/views/Landing/landing.module.css
@@ -1,9 +1,9 @@
 .landingPage{
-    position: relative;
+    padding-right: 100px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-end;
+    justify-content: space-evenly;
     background: url('../../images/landingBackground.jpg');
     background-repeat: no-repeat;
     background-position: center center;
@@ -12,38 +12,23 @@
 }
 
 .welcome {
-    position: absolute;
     font-family: 'Roboto Slab', serif;
     font-weight: 400;
     font-size: 60px;
     letter-spacing: 10px;
     margin: 0;
-    color: #090B08;
-    animation: welcome 2s steps(15);
-    top: 15%;
-    right: 15%;
-}
-
-@keyframes welcome {
-    from{
-        clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
-    }
-    to{
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    }
+    color: #3e3627;
 }
 
 .button{
     padding: 15px 40px;
     border: none;
-    border-radius: 30px;
-    position: absolute;
-    right: 15%;
+    border-radius: 10px;
     font-family: 'Roboto Slab', serif;
     font-weight: 400;
     letter-spacing: 5px;
     font-size: 40px;
-    color: #090B08;
+    color: #3e3627;
     background-color: #EADECB;
     animation: shadow 1.5s ease-in-out infinite;
     transition: 1s;
@@ -66,4 +51,18 @@
     transform: scale(1.1);
     animation: none;
     cursor: pointer;
+}
+
+.p {
+    color: #3e3627;
+    animation: welcome 1.5s steps(19);
+}
+
+@keyframes welcome {
+    from{
+        clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+    }
+    to{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
 }
