--- a/client/src/components/Filters/filters.css
+++ b/client/src/components/Filters/filters.css
@@ -15,6 +15,7 @@
     gap: 10px;
 }
 
+.selectOrigin,
 .selectGender,
 .selectId{
     padding: 2px 10px;
@@ -34,11 +35,13 @@
     z-index: 1000;
 }
 
+.selectOrigin:hover,
 .selectGender:hover,
 .selectId:hover{
     cursor: pointer;
 }
 
+.selectOrigin:hover::before,
 .selectGender:hover::before,
 .selectId:hover::before {
     content: '';
@@ -54,6 +57,7 @@
     bottom: -19px;
 }
 
+.selectOriginActive,
 .selectGenderActive,
 .selectIdActive {
     padding: 2px 10px;
@@ -65,6 +69,7 @@
     cursor: pointer;
 }
 
+.selectOriginActive::before,
 .selectGenderActive::before,
 .selectIdActive::before {
     content: '';
@@ -77,7 +82,7 @@
     border-left: 10px solid transparent;
     position: absolute;
     left: calc(50% - 10px);
-    bottom: -20px;
+    bottom: -19px;
 }
 
 .title{
@@ -92,11 +97,12 @@
     z-index: 0;
 }
 
-.options,
 .orderActive,
 .genderActive,
 .hideOrder,
-.hideGender {
+.hideGender,
+.originActive,
+.hideOrigin {
     padding: 5px 0;
     background-color: #3e3627;
     color: #EADECB;
@@ -113,18 +119,18 @@
 }
 
 
-
-.options::-webkit-scrollbar,
+.originActive::-webkit-scrollbar,
 .orderActive::-webkit-scrollbar,
 .genderActive::-webkit-scrollbar,
-.hideGender::-webkit-scrollbar,
-.hideOrder::-webkit-scrollbar {
+.hideOrigin::-webkit-scrollbar,
+.hideOrder::-webkit-scrollbar,
+.hideGender::-webkit-scrollbar {
     display: none;
   }
 
 .orderActive {
     animation: order .5s;
-    height: 100px;
+    height: 130px;
 }
 
 @keyframes order {
@@ -133,8 +139,24 @@
         opacity: 0;
     }
     100%{
-        height: 100px;
+        height: 130px;
         opacity: 1;
+    }
+}
+
+.hideOrder{
+    animation: hideOrder .5s;
+}
+
+@keyframes hideOrder {
+    0%{
+        height: 130px;
+        opacity: 1;
+    }
+
+    100%{
+        height: 0;
+        opacity: 0;
     }
 }
 
@@ -169,16 +191,31 @@
     }
 }
 
-.hideOrder{
-    animation: hideOrder .5s;
+.originActive{
+    animation: origin .5s;
+    height: 95px;
 }
 
-@keyframes hideOrder {
+@keyframes origin {
     0%{
-        height: 100px;
+        height: 0px;
+        opacity: 0;
+    }
+    100%{
+        height: 95px;
         opacity: 1;
     }
+}
 
+.hideOrigin{
+    animation: hideOrigin .5s;
+}
+
+@keyframes hideOrigin {
+    0%{
+        height: 95px;
+        opacity: 1;
+    }
     100%{
         height: 0;
         opacity: 0;
