--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Roboto Slab', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(135deg, #8349BF, #350a62d1);
   z-index: 0;
 }
 
