--- a/client/src/views/Home/home.module.css
+++ b/client/src/views/Home/home.module.css
@@ -3,6 +3,13 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(135deg, #2d0854, #8349BF);
+    height: 100%;
+}
+
+.filterAndSearchbar{
+    width: 80%;
+    margin-top: 120px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
