--- a/client/src/components/Filters/filters.css
+++ b/client/src/components/Filters/filters.css
@@ -19,7 +19,7 @@
 .selectGender,
 .selectId{
     padding: 2px 10px;
-    color: #eadfcc;
+    color: #0B0332;
     width: 150px;
     display: flex;
     position: relative;
@@ -31,8 +31,7 @@
     border-radius: 2px;
     font-weight: 300;
     transition: .5s;
-    background-color: #3e3627;
-    z-index: 1000;
+    background-color: #DC80E6;
 }
 
 .selectOrigin:hover,
@@ -50,7 +49,7 @@
     width: 0;
     border-bottom: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 10px solid #3e3627;
+    border-top: 10px solid #DC80E6;
     border-left: 10px solid transparent;
     position: absolute;
     left: calc(50% - 10px);
@@ -61,11 +60,11 @@
 .selectGenderActive,
 .selectIdActive {
     padding: 2px 10px;
-    color: #EADECB;
+    color: #0B0332;
     font-family: 'Roboto Slab', serif;
     letter-spacing: 2px;
     border-radius: 2px;
-    background-color: #3e3627;
+    background-color: #DC80E6;
     cursor: pointer;
 }
 
@@ -78,7 +77,7 @@
     width: 0;
     border-bottom: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 10px solid #3e3627;
+    border-top: 10px solid #DC80E6;
     border-left: 10px solid transparent;
     position: absolute;
     left: calc(50% - 10px);
@@ -91,10 +90,9 @@
 }
 
 .hiddenOptions{
-    color: #EADECB;
+    color: #0B0332;
     overflow: auto;
     display: none;
-    z-index: 0;
 }
 
 .orderActive,
@@ -104,10 +102,10 @@
 .originActive,
 .hideOrigin {
     padding: 5px 0;
-    background-color: #3e3627;
-    color: #EADECB;
+    background-color: #DC80E6;
+    color: #0B0332;
     letter-spacing: 2px;
-    font-weight: 100;
+    font-weight: 300;
     overflow: auto;
     border-radius: 2px;
     position: absolute;
@@ -116,6 +114,7 @@
     width: 100%;
     top: 40px;
     gap: 15px;
+    z-index: 999;
 }
 
 
@@ -245,7 +244,7 @@
     width: 0;
     border-top: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-left: 5px solid #EADECB;
+    border-left: 5px solid #0B0332;
     border-bottom: 5px solid transparent;
     position: absolute;
     top: calc(50% - 5px);
