--- a/client/src/components/SearchBar/searchBar.module.css
+++ b/client/src/components/SearchBar/searchBar.module.css
@@ -5,8 +5,8 @@
 
 .input{
     padding: 0 10px;
-    background-color: #3e3627;
-    color: #EADECB;
+    background-color: #dc80e6;
+    color: #0B0332;
     font-family: 'Roboto Slab', serif;
     font-weight: 100;
     letter-spacing: 1px;
@@ -19,13 +19,13 @@
 .input:focus{
     outline: none;
     transform: scale(1.1);
-    box-shadow: 0 0 10px #EADECB;
+    box-shadow: 0 0 10px #0B0332;
 }
 
 .input:hover{
     transform: scale(1.1);
     transition: 0.5s;
-    box-shadow: 0 0 10px #EADECB;
+    box-shadow: 0 0 10px #0B0332;
 }
 
 .button {
@@ -33,8 +33,8 @@
     padding: 2px 10px;
     border: none;
     border-radius: 2px;
-    color: #EADECB;
-    background-color: #3e3627;
+    color: #0B0332;
+    background-color: #dc80e6;
     font-family: 'Roboto Slab', serif;
     font-weight: 300;
     letter-spacing: 2px;
