--- a/client/src/views/Home/home.module.css
+++ b/client/src/views/Home/home.module.css
@@ -6,10 +6,20 @@
     height: 100%;
 }
 
+.background{
+    position: fixed;
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+}
+
 .filterAndSearchbar{
     width: 80%;
-    margin-top: 120px;
+    margin-top: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
+    z-index: 1000;
 }
