--- a/client/src/views/Landing/landing.module.css
+++ b/client/src/views/Landing/landing.module.css
@@ -1,9 +1,10 @@
 .landingPage{
-    padding-right: 100px;
     display: flex;
-    flex-direction: column;
     align-items: flex-end;
-    justify-content: space-evenly;
+    flex-direction: column;
+    padding-right: 100px;
+    padding-top: 100px;
+    gap: 80px;
     background: url('../../images/landingBackground.jpg');
     background-repeat: no-repeat;
     background-position: center center;
@@ -12,51 +13,51 @@
 }
 
 .welcome {
+    margin: 0;
+    margin-left: 700px;
     font-family: 'Roboto Slab', serif;
     font-weight: 400;
     font-size: 60px;
     letter-spacing: 10px;
-    margin: 0;
-    color: #3e3627;
+    color: #D5D3FB;
 }
 
 .button{
-    padding: 15px 40px;
+    padding: 5px 20px;
     border: none;
     border-radius: 10px;
     font-family: 'Roboto Slab', serif;
-    font-weight: 400;
-    letter-spacing: 5px;
+    color: #0C0413;
     font-size: 40px;
-    color: #3e3627;
-    background-color: #EADECB;
+    letter-spacing: 5px;
+    background-color: #D5D3FB;
     animation: shadow 1.5s ease-in-out infinite;
     transition: 1s;
 }
 
 @keyframes shadow {
     0%{
-        box-shadow: 0 0 10px #2D2736;
+        box-shadow: 0 0 10px #FE81F9;
     }
     50%{
-        box-shadow: 0 0 40px #2D2736;
+        box-shadow: 0 0 40px #FE81F9;
     }
     100%{
-        box-shadow: 0 0 10px #2D2736;
+        box-shadow: 0 0 10px #FE81F9;
     }
 }
 
 .button:hover{
     transition: 1s;
     transform: scale(1.1);
-    animation: none;
     cursor: pointer;
 }
 
 .p {
-    color: #3e3627;
+    color: #B19EED;
     animation: welcome 1.5s steps(19);
-    font-size: 25px
+    font-size: 25px;
+    margin-bottom: 100px;
 }
 
 @keyframes welcome {
