--- a/client/src/components/Cards/cards.module.css
+++ b/client/src/components/Cards/cards.module.css
@@ -2,8 +2,69 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 250px;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 30px;
     width: 80%;
     column-gap: 2.5%;
     row-gap: 50px;
+}
+
+.loadingGif{
+    position: fixed;
+    width: auto;
+    height: 150px;
+    left: 550px;
+    top: 310px;
+}
+
+.pagesHandler{
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    background-color: #dc80e6af;
+    color: #0B0332;
+    border-radius: 2px;
+}
+
+.pagesHandler h4{
+    background-color: #0B0332;
+    padding: 0px 10px 3px 10px;
+    color: #dc80e6;
+    font-size: 25px;
+    font-weight: 300;
+    margin: 0;
+}
+
+.nextButton,
+.previousButton{
+    font-size: 25px;
+    background-color: #0B0332;
+    border: none;
+    color: #dc80e6;
+    padding-bottom: 2px;
+    transition: .5s;
+}
+
+.nextButton{
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+.previousButton{
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
+.nextButton:hover{
+    cursor: pointer;
+    transform: translateX(10px) scale(1.1);
+    transition: .5s;
+}
+
+.previousButton:hover{
+    cursor: pointer;
+    transform: translateX(-10px) scale(1.2);
+    transition: .5s;
 }
