--- a/client/src/components/Nav/nav.module.css
+++ b/client/src/components/Nav/nav.module.css
@@ -1,10 +1,9 @@
 .navBar {
-    top: 5%;
+    top: 25px;
     position: relative;
     display: flex;
     justify-content: space-evenly;
     width: 100%;
-    position: fixed;
     z-index: 1000;
 }
 
