--- a/client/src/views/Home/home.module.css
+++ b/client/src/views/Home/home.module.css
@@ -7,6 +7,7 @@
 }
 
 .background{
+    top: 0;
     position: fixed;
     object-fit: cover;
     width: 100%;
@@ -16,10 +17,9 @@
 
 .filterAndSearchbar{
     width: 80%;
-    margin-top: 100px;
+    margin-top: 40px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    position: fixed;
     z-index: 1000;
 }
