TERMINANDO CSS DE DETAIL

--- a/client/src/views/Detail/detail.module.css
+++ b/client/src/views/Detail/detail.module.css
@@ -33,15 +33,77 @@
 .videogameDiv h1{
     color: #ADEAF9;
     letter-spacing: 4px;
+    font-size: 50px;
+    text-align: center;
+}
+
+.detailsContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.detailImage{
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 5px;
+    width: 49%;
+    height: 400px;
+}
+
+.detailImage img{
+    opacity: 1;
+    height: 100%;
+    border-top-left-radius: 5px;
 }
 
 .detailsDiv{
+    font-size: 20px;
+    width: 49%;
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: #adeaf976;
+    border-top-right-radius: 5px;
 }
 
-.detailsDiv img{
-    border-radius: 5px;
-    height: 300px;
-    opacity: 90%;
+.detailsInfo{
+    padding: 15px 0;
+    width: 80%;
+    height: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    box-shadow: 0 0 5px #0B0332;
+}
+
+.detailsInfo h4{
+    margin: 0;
+    font-weight: 400;
+    letter-spacing: 1px;
+    font-size: 25px;
+    color: #0B0332;
+}
+
+.detailsInfo h5{
+    margin-top: 5px;
+    font-weight: 400;
+    color: #0B0332;
+}
+
+.platforms p{
+    margin: 5px 0;
+    font-weight: 400;
+    color: #0B0332;
+}
+
+.containerDescription{
+    background-color: #adeaf976;
+    padding: 15px 40px;
+    margin: 20px 0;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
