--- a/client/src/views/Form/form.module.css
+++ b/client/src/views/Form/form.module.css
@@ -26,11 +26,10 @@
 }
 
 .genderPlatformDiv{
-    margin: 5px 0;
-    width: 100%;
+    margin: 15px 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .formDiv{
@@ -65,23 +64,32 @@
     font-size: 25px;
 }
 
-.form input{
+.formDivs input{
+    padding: 2.5px 0 2.5px 2.5%;
     color: #0B0332;
-    padding: 2.5px 3%;
     height: 25px;
-    width: 90%;
+    width: 97.5%;
     font-family: 'Roboto Slab', serif;
     font-size: 15px;
     background-color: #adeaf9a7;
     border: none;
     border-radius: 2px;
+    transition: .5s;
 }
 
-.form ul{
+.formDivs input:focus{
+    transform: scale(1.01);
+    transition: .5s;
+    outline-color: #0B0332;
+    outline-style: solid;
+}
+
+.formDivs ul{
+    padding: 5px 0 0 2.5%;
     display: flex;
     flex-direction: row;
-    padding: 5px 0 0 15px;
     height: 25px;
+    width: 97.5%;
     font-size: 15px;
     background-color: #adeaf9a7;
     border: none;
