ARREGLANDO ESTILO DEL PAGINADO

--- a/client/src/components/Cards/cards.module.css
+++ b/client/src/components/Cards/cards.module.css
@@ -1,13 +1,21 @@
 .cardsSection{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    width: 80%;
+}
+
+.cardsDisplay{
+    width: 100%;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 100px;
-    margin-bottom: 30px;
-    width: 80%;
     column-gap: 2.5%;
     row-gap: 50px;
+    margin-bottom: 30px;
 }
 
 .loadingGif{
@@ -19,9 +27,11 @@
 }
 
 .pagesHandler{
-    margin-top: 60px;
+    width: fit-content;
+    margin-bottom: 60px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 10px;
     background-color: #dc80e6af;
     color: #0B0332;
