--- a/client/src/views/Detail/detail.module.css
+++ b/client/src/views/Detail/detail.module.css
@@ -80,6 +80,44 @@
     box-shadow: 0 0 5px #0B0332;
 }
 
+.detailsWithLongerId{
+    position: relative;
+    margin-top: 0px;
+    padding: 30px 0 0 20px;
+    width: 80%;
+    height: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    box-shadow: 0 0 5px #0B0332;
+    gap: 40px;
+}
+
+.detailsWithLongerId h4{
+    margin: 15px 0 0 0;
+    font-weight: 400;
+    letter-spacing: 1px;
+    font-size: 25px;
+    color: #0B0332;
+}
+
+.detailsWithLongerId h5{
+    font-size: 17px;
+    margin: 20px 0 0 0;
+    font-weight: 400;
+    color: #0B0332;
+}
+
+.detailsWithLongerId h6{
+    margin: 0;
+    font-size: 17px;
+    position: absolute;
+    font-weight: 400;
+    color: #0B0332;
+    top: 10px;
+    left: 20px;
+}
+
 .detailsInfo h4{
     margin: 0;
     font-weight: 400;
