--- a/client/src/views/Landing/landing.module.css
+++ b/client/src/views/Landing/landing.module.css
@@ -2,19 +2,16 @@
     display: flex;
     align-items: flex-end;
     flex-direction: column;
-    padding-right: 100px;
-    padding-top: 100px;
-    gap: 80px;
     background: url('../../images/landingBackground.jpg');
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-position: center center;
     background-size: cover;
     height: 100vh;
 }
 
 .welcome {
-    margin: 0;
-    margin-left: 700px;
+    margin: 75px;
     font-family: 'Roboto Slab', serif;
     font-weight: 400;
     font-size: 60px;
@@ -23,6 +20,7 @@
 }
 
 .button{
+    margin: 100px 75px 0 0;
     padding: 5px 20px;
     border: none;
     border-radius: 10px;
@@ -54,10 +52,10 @@
 }
 
 .p {
+    margin: 0 100px 0 0;
     color: #B19EED;
     animation: welcome 1.5s steps(19);
     font-size: 25px;
-    margin-bottom: 100px;
 }
 
 @keyframes welcome {
