--- a/client/src/components/Card/card.module.css
+++ b/client/src/components/Card/card.module.css
@@ -33,8 +33,8 @@
 
 .cardDiv h2{
     position: absolute;
-    padding: 5px 0;
-    width: 100%;
+    padding: 5px 5%;
+    width: 90%;
     bottom: -20px;
     background-color: #0B0332;
     color: #dc80e6;
