--- a/client/src/views/Home/home.module.css
+++ b/client/src/views/Home/home.module.css
@@ -22,3 +22,82 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.myCreationsButton{
+    display: flex;
+    position: absolute;
+    position: fixed;
+    right: 10%;
+    top: 25%;
+    border-radius: 50px;
+    background-color: #DC80E6;
+    height: 50px;
+    width: 50px;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 0 10px #0B0332;
+}
+
+.myCreationsButton p{
+    margin: 0 0 2px 0;
+    color: #0B0332;
+    font-size: 10px;
+}
+
+.myCreationsButton:hover{
+    cursor: pointer;
+    transform: scale(1.3);
+}
+
+.gamesHandler{
+    overflow: auto;
+    top: 15%;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    height: 70vh;
+    width: 50%;
+    background-color: #dc80e6f6;
+    z-index: 2000;
+    border-radius: 2px;
+}
+
+.gamesHandler::-webkit-scrollbar{
+    display: none;
+}
+
+.quitDbGamesHandler{
+    top: 0;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: transparent;
+    margin: 0; 
+    border: none;
+    z-index: 1000;
+}
+
+.quitDbGamesHandler:hover{
+    cursor: pointer;
+    background-color: #0b03325e;
+}
+
+.eachGame{
+    width: auto;
+    position: relative;
+    margin: 20px 20px 0 30px;
+    flex-direction: row;
+    display: flex;
+}
+
+.eachGame p{
+    margin: 0;
+}
+
+.eachGame img{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: 25px;
+    top: calc(50% - 10px);
+}
